fix: api specs
